--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
 		<link rel="stylesheet" href="style.css">
 		<script type="text/javascript" src="script.js"></script>
 		<link rel="fav icon" href="Icon.ico">
+		
+		<!-- Primary Meta Tags -->
+		<title>Cells(Programming Language)</title>
+		<meta name="title" content="Cells(Programming Language)">
+		<meta name="description" content="Cells is a programming language. It was made by Attachment Aditya, Attachment Studios.">
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://attachment-studios.github.io/Cells/">
+		<meta property="og:title" content="Cells(Programming Language)">
+		<meta property="og:description" content="Cells is a programming language. It was made by Attachment Aditya, Attachment Studios.">
+		<meta property="og:image" content="">
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://attachment-studios.github.io/Cells/">
+		<meta property="twitter:title" content="Cells(Programming Language)">
+		<meta property="twitter:description" content="Cells is a programming language. It was made by Attachment Aditya, Attachment Studios.">
+		<meta property="twitter:image" content="">
 	</head>
 	<body>
 		<div class="sidebar">
