--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 		<meta property="og:url" content="https://attachment-studios.github.io/Cells/">
 		<meta property="og:title" content="Cells(Programming Language)">
 		<meta property="og:description" content="Cells is a programming language. It was made by Attachment Aditya, Attachment Studios.">
-		<meta property="og:image" content="">
+		<meta property="og:image" content="Social Preview.png">
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="https://attachment-studios.github.io/Cells/">
 		<meta property="twitter:title" content="Cells(Programming Language)">
 		<meta property="twitter:description" content="Cells is a programming language. It was made by Attachment Aditya, Attachment Studios.">
-		<meta property="twitter:image" content="">
+		<meta property="twitter:image" content="Social Preview.png">
 	</head>
 	<body>
 		<div class="sidebar">
