--- a/index.html
+++ b/index.html
@@ -23,6 +23,27 @@
 		<meta property="twitter:title" content="Cells(Programming Language)">
 		<meta property="twitter:description" content="Cells is a programming language. It was made by Attachment Aditya, Attachment Studios.">
 		<meta property="twitter:image" content="Social Preview.png">
+		
+		<!-- HTML Meta Tags -->
+		<title>Cells(Programming Language)</title>
+		<meta name="description" content="Cells is a programming language. It was made by Attachment Aditya, Attachment Studios.">
+
+		<!-- Facebook Meta Tags -->
+		<meta property="og:url" content="https://attachment-studios.github.io/Cells">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Cells(Programming Language)">
+		<meta property="og:description" content="Cells is a programming language. It was made by Attachment Aditya, Attachment Studios.">
+		<meta property="og:image" content="https://raw.githubusercontent.com/Attachment-Studios/Cells/main/Social Preview.png">
+
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content="attachment-studios.github.io">
+		<meta property="twitter:url" content="https://attachment-studios.github.io/Cells">
+		<meta name="twitter:title" content="Cells(Programming Language)">
+		<meta name="twitter:description" content="Cells is a programming language. It was made by Attachment Aditya, Attachment Studios.">
+		<meta name="twitter:image" content="https://raw.githubusercontent.com/Attachment-Studios/Cells/main/Social Preview.png">
+
+		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 	</head>
 	<body>
 		<div class="sidebar">
