--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
 								<td>Updates species named [Species Name:text] such that is value [Value:num/text] is num then it gets <yellow>s</yellow>ubtracted from value otherwise removes text with same value from value of species, if any.</td>
 							</tr>
 							<tr>
-								<td>tissue [Species Name:text],[Value:num/text]:</td>
+								<td>multinucleate [Species Name:text],[Value:num/text]:</td>
 								<td>Updates species named [Species Name:text] such that is va<blue>l</blue>ue [Value:num/text] is num then multiplies to value otherwise concatinates.</td>
 							</tr>
 							<tr>
-								<td>eject [Species Name:text],[Valu<yellow>e</yellow>:num/text]:</td>
+								<td>mitosis [Species Name:text],[Valu<yellow>e</yellow>:num/text]:</td>
 								<td>Updates species named [Species Name:text] such that is value [Value:num/text] is num then i<red>t</red> gets divided from value otherwise removes text with same value from value of species, if any.</td>
 							</tr>
 							<tr>
@@ -204,7 +204,7 @@
 								<td>Updates species named [Species Name:text] such that is value [Value:num/f<blue>l</blue>oat/text] is num/float then multiplies to value in form of floats otherwise concatinates.</td>
 							</tr>
 							<tr>
-								<td>eject [Species Name:text],[Value:num/float/text]:</td>
+								<td>meiosis [Species Name:text],[Value:num/float/text]:</td>
 								<td>Updates species named [Species Name:text] such that is value [Value:num/float/text] is num/float then it gets divided from value in form of floats otherwise removes text <red>w</red>ith same value from value of species, if any.</td>
 							</tr>
 							<tr>
