--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						Truth Machine<br>
 						:::<input type="text" value="exocytosis Truth Machine:nomenclate inp < 0:endocytosis inp:skip inp:regulate ^ 7:regulate ^ 9:exocytosis 0:>:exocytosis 1:regulate ^ 9:" id="Truth Machine" /><br><br>
 						Super Command(Contains All Syntax)<br>
-						:::<input type="text" value="exocytosis Hello World!:nomenclate var < variable value:var < new value:endocytosis var:skip 0:grow 10:eject 10:multinucleate 10:mitosis 10:fuse 10:meiosis 10:regulate ^ 1:" id="Super" /><br><br>
+						:::<input type="text" value="exocytosis Hello World!:nomenclate var < variable value:var < new value:endocytosis var:skip 0:grow var,10:eject var,10:multinucleate var,10:mitosis var,10:fuse var,10:meiosis var,10:regulate ^ 1:" id="Super" /><br><br>
 					</p>
 				</div>
 				<div class="cheatsheet" id="cheatsheet">
